classDiagram
    class User {
        +int id
        +str email
        +str username
        +str hashed_password
        +str full_name
        +str bio
        +str city
        +str avatar_url
        +bool is_active
        +datetime created_at
        +List~Book~ books
        +List~Review~ reviews
        +List~WishlistItem~ wishlist_items
        +List~Exchange~ sent_exchanges
        +List~Exchange~ received_exchanges
        +List~Message~ sent_messages
        +List~Friendship~ friendships
    }

    class Book {
        +int id
        +str title
        +str author
        +str description
        +str isbn
        +BookGenre genre
        +int published_year
        +str language
        +BookCondition condition
        +bool is_available_for_exchange
        +int owner_id
        +datetime created_at
        +User owner
        +List~Review~ reviews
        +List~Exchange~ exchanges_as_offered
        +List~Exchange~ exchanges_as_requested
        +List~WishlistItem~ wishlist_items
    }

    class Exchange {
        +int id
        +int requester_id
        +int owner_id
        +int offered_book_id
        +int requested_book_id
        +ExchangeStatus status
        +str message
        +datetime created_at
        +datetime updated_at
        +User requester
        +User owner
        +Book offered_book
        +Book requested_book
        +List~Message~ messages
    }

    class Message {
        +int id
        +int exchange_id
        +int sender_id
        +str content
        +datetime created_at
        +Exchange exchange
        +User sender
    }

    class Review {
        +int id
        +int book_id
        +int user_id
        +int rating
        +str content
        +datetime created_at
        +datetime updated_at
        +Book book
        +User user
    }

    class Friendship {
        +int id
        +int requester_id
        +int addressee_id
        +str status
        +datetime created_at
        +datetime updated_at
        +User requester
        +User addressee
    }

    class WishlistItem {
        +int id
        +int user_id
        +int book_id
        +datetime created_at
        +User user
        +Book book
    }

    %% Relationships
    User "1" -- "N" Book : owns
    User "1" -- "N" Review : writes
    User "1" -- "N" WishlistItem : has
    User "1" -- "N" Exchange : requests
    User "1" -- "N" Exchange : receives
    User "1" -- "N" Message : sends
    User "N" -- "N" Friendship : participates
    
    Book "1" -- "N" Review : receives
    Book "1" -- "N" Exchange : offered_in
    Book "1" -- "N" Exchange : requested_in
    Book "N" -- "N" WishlistItem : appears_in
    
    Exchange "1" -- "N" Message : contains
    Exchange "N" -- "1" Book : offered_book
    Exchange "N" -- "1" Book : requested_book
    Exchange "N" -- "1" User : requester
    Exchange "N" -- "1" User : owner
    
    Message "N" -- "1" Exchange : belongs_to
    Message "N" -- "1" User : sent_by
    
    Review "N" -- "1" Book : about
    Review "N" -- "1" User : written_by
    
    Friendship "N" -- "1" User : requester
    Friendship "N" -- "1" User : addressee
    
    WishlistItem "N" -- "1" User : belongs_to
    WishlistItem "N" -- "1" Book : references
